--- a/src/clipitch/css/style.css
+++ b/src/clipitch/css/style.css
@@ -12,16 +12,16 @@ h5 {
   font-family: "Pattaya", serif;
 }
 
-b.bFont{
+b.bFont {
   font-family: "Roboto", serif;
   font-size: 1.5rem;
 }
 
-b.clipedFont{
+b.clipedFont {
   font-family: "Roboto", serif;
 }
 
-.gameFont{
+.gameFont {
   background: #ffc107;
 }
 
@@ -37,11 +37,11 @@ b.clipedFont{
   left: 16px;
 }
 
-.bg-views{
-  background: rgba(0,0,0,0.7);
+.bg-views {
+  background: rgba(0, 0, 0, 0.7);
 }
 
-.bg-cliped{
+.bg-cliped {
   background: rgba(255, 0, 0, 1);
 }
 
@@ -57,13 +57,13 @@ b.clipedFont{
 .bg-custom {
   background-color: #c271eb !important;
 }
-.navbar{
+.navbar {
   margin: 0;
-    border: 0;
+  border: 0;
 }
 
-.nav-image{
-  content:url("/src/clipitch/imgs/logo.png");
+.nav-image {
+  content: url("/src/clipitch/imgs/logo.png");
   width: 20%;
   height: 100%;
 }
@@ -93,16 +93,11 @@ header.masthead {
   padding-top: 4%;
 }
 
-footer {
-  position: inherit;
-  bottom: 0;
-}
-
 .carousel-item {
   text-shadow: 0px 2px 4px black;
 }
 
-#carouselIFrame{
+#carouselIFrame {
   width: 1280px !important;
   height: 720px !important;
 }
@@ -110,165 +105,153 @@ footer {
 .list-group-item {
   background-color: transparent;
   border-color: transparent;
-  }
+}
 
-ul li a{
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-} 
+ul li a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
 
 .textCenter {
   text-align: center;
 }
 
-.testeImg:hover{
+.testeImg:hover {
   border-left: 7px solid #c271eb !important;
   border-bottom: 7px solid #c271eb !important;
   transform: scale(1.01);
 }
 
 /* Define o css para o tamanho da resolução em Tablets */
-@media screen and (max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)  and (orientation: landscape){
+@media screen and (max-width: 992px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
   .bg-transparent {
     background-color: #c271eb !important;
     position: relative;
   }
 
-  .nav-image{
-    content:url("/src/clipitch/imgs/logo-mobile.png");
+  .nav-image {
+    content: url("/src/clipitch/imgs/logo-mobile.png");
     width: 20%;
     height: 100%;
   }
 
-  #carouselIFrame{
+  #carouselIFrame {
     width: 100% !important;
     height: 100% !important;
   }
 }
 
 /* efine o css para o tamanho da resolução em IPad modo Portrait */
-@media only screen  and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
   .bg-transparent {
     transition: 750ms ease;
     background-color: transparent !important;
   }
 
-  .nav-image{
-    content:url("/src/clipitch/imgs/logo-mobile.png");
+  .nav-image {
+    content: url("/src/clipitch/imgs/logo-mobile.png");
     width: 20%;
     height: 100%;
   }
 
-  #carouselIFrame{
+  #carouselIFrame {
     width: 100% !important;
     height: 100% !important;
   }
 }
 
 /* Define o css para o tamanho da resolução em IPad modo Landscape */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1)
- {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
   .bg-transparent {
     transition: 750ms ease;
     background-color: transparent !important;
   }
 
-  .nav-image{
-    content:url("/src/clipitch/imgs/logo-mobile.png");
+  .nav-image {
+    content: url("/src/clipitch/imgs/logo-mobile.png");
     width: 20%;
     height: 100%;
   }
 
-  #carouselIFrame{
+  #carouselIFrame {
     width: 100% !important;
     height: 100% !important;
   }
 }
 
 /* Define o css para o tamanho da resolução em IPad Pro modo Portrait */
-@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (-webkit-min-device-pixel-ratio: 2)  and (orientation: portrait)  {
+@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
   .bg-transparent {
     transition: 750ms ease;
     background-color: transparent !important;
   }
 
-  .nav-image{
-    content:url("/src/clipitch/imgs/logo-mobile.png");
+  .nav-image {
+    content: url("/src/clipitch/imgs/logo-mobile.png");
     width: 20%;
     height: 100%;
   }
 
-  #carouselIFrame{
+  #carouselIFrame {
     width: 100% !important;
     height: 100% !important;
   }
 }
 
 /* Define o css para o tamanho da resolução em Iphone X (Mobile) */
-@media only screen and (max-width: 600px)and (-webkit-min-device-pixel-ratio: 2)  and (orientation: landscape) {
+@media only screen and (max-width: 600px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
   .bg-transparent {
     background-color: #c271eb !important;
     position: relative;
   }
 
-  .nav-image{
-    content:url("/src/clipitch/imgs/logo-mobile.png");
+  .nav-image {
+    content: url("/src/clipitch/imgs/logo-mobile.png");
     width: 20%;
     height: 100%;
   }
 
-  #carouselIFrame{
+  #carouselIFrame {
     width: 100% !important;
     height: 100% !important;
   }
 }
 
 /* Define o css para o tamanho da resolução Iphone X (Mobile) */
-@media only screen and (max-width: 600px)and (-webkit-min-device-pixel-ratio: 2)  and (orientation: portrait) {
+@media only screen and (max-width: 600px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
   .bg-transparent {
     background-color: #c271eb !important;
     position: relative;
   }
 
-  .nav-image{
-    content:url("/src/clipitch/imgs/logo-mobile.png");
+  .nav-image {
+    content: url("/src/clipitch/imgs/logo-mobile.png");
     width: 20%;
     height: 100%;
   }
 
-  #carouselIFrame{
+  #carouselIFrame {
     width: 100% !important;
     height: 100% !important;
   }
 }
 
-/* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
-.modal-content {  
+.modal-content {
   background-image: url("/src/clipitch/imgs/cph_snip.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
   margin: 15% auto;
-  width: 45%; 
+  width: 45%;
 }
 
-/* The Close Button */
 .close {
   color: white;
   font-size: 28px;
@@ -284,10 +267,20 @@ ul li a{
 
 .modal-header {
   background-color: transparent;
-  border : none !important;
+  border: none !important;
 }
 
 .modal-footer {
   background-color: transparent;
   border: none !important;
+}
+
+/* Modal Body */
+.modal-body {
+  padding: 2px 16px;
+}
+
+.modal-xl {
+  max-width: 100vw !important;
+  max-height: 100vh !important;
 }
