--- a/src/clipitch/css/style.css
+++ b/src/clipitch/css/style.css
@@ -123,119 +123,6 @@ ul li a {
   transform: scale(1.01);
 }
 
-/* Define o css para o tamanho da resolução em Tablets */
-@media screen and (max-width: 992px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
-  .bg-transparent {
-    background-color: #c271eb !important;
-    position: relative;
-  }
-
-  .nav-image {
-    content: url("/src/clipitch/imgs/logo-mobile.png");
-    width: 20%;
-    height: 100%;
-  }
-
-  #carouselIFrame {
-    width: 100% !important;
-    height: 100% !important;
-  }
-}
-
-/* efine o css para o tamanho da resolução em IPad modo Portrait */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
-  .bg-transparent {
-    transition: 750ms ease;
-    background-color: transparent !important;
-  }
-
-  .nav-image {
-    content: url("/src/clipitch/imgs/logo-mobile.png");
-    width: 20%;
-    height: 100%;
-  }
-
-  #carouselIFrame {
-    width: 100% !important;
-    height: 100% !important;
-  }
-}
-
-/* Define o css para o tamanho da resolução em IPad modo Landscape */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-  .bg-transparent {
-    transition: 750ms ease;
-    background-color: transparent !important;
-  }
-
-  .nav-image {
-    content: url("/src/clipitch/imgs/logo-mobile.png");
-    width: 20%;
-    height: 100%;
-  }
-
-  #carouselIFrame {
-    width: 100% !important;
-    height: 100% !important;
-  }
-}
-
-/* Define o css para o tamanho da resolução em IPad Pro modo Portrait */
-@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-  .bg-transparent {
-    transition: 750ms ease;
-    background-color: transparent !important;
-  }
-
-  .nav-image {
-    content: url("/src/clipitch/imgs/logo-mobile.png");
-    width: 20%;
-    height: 100%;
-  }
-
-  #carouselIFrame {
-    width: 100% !important;
-    height: 100% !important;
-  }
-}
-
-/* Define o css para o tamanho da resolução em Iphone X (Mobile) */
-@media only screen and (max-width: 600px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
-  .bg-transparent {
-    background-color: #c271eb !important;
-    position: relative;
-  }
-
-  .nav-image {
-    content: url("/src/clipitch/imgs/logo-mobile.png");
-    width: 20%;
-    height: 100%;
-  }
-
-  #carouselIFrame {
-    width: 100% !important;
-    height: 100% !important;
-  }
-}
-
-/* Define o css para o tamanho da resolução Iphone X (Mobile) */
-@media only screen and (max-width: 600px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-  .bg-transparent {
-    background-color: #c271eb !important;
-    position: relative;
-  }
-
-  .nav-image {
-    content: url("/src/clipitch/imgs/logo-mobile.png");
-    width: 20%;
-    height: 100%;
-  }
-
-  #carouselIFrame {
-    width: 100% !important;
-    height: 100% !important;
-  }
-}
 
 .modal {
   width: 100%; /* Full width */
@@ -285,11 +172,256 @@ ul li a {
   max-height: 100vh !important;
 }
 
-.imgsModal{
+.imgsModal {
   width: 15%;
 }
 
-.iframeModal{
+.iframeModal {
   width: 640px;
   height: 360px;
+}
+
+
+/* Define o css para o tamanho da resolução em Tablets */
+@media screen and (max-width: 992px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
+  .bg-transparent {
+    background-color: #c271eb !important;
+    position: relative;
+  }
+
+  .nav-image {
+    content: url("/src/clipitch/imgs/logo-mobile.png");
+    width: 20%;
+    height: 100%;
+  }
+
+  #carouselIFrame {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  
+  #carouselIFrame {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  .modal-content{
+    width: 100%;
+    height: 100%;
+  }
+
+  #colModal1.col {
+    flex: 1 0 10%;
+    padding-bottom: 5%;
+  }
+
+  .modal-dialog-centered{    
+    margin-left: 10%;
+  }
+
+  .modal-xl {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .imgsModal {
+    width: 25%;
+  }
+
+  .iframeModal {
+    width: 100%;
+    height: 100%;
+  }
+
+  body{
+    width: 100%;
+    height: 100%;
+  }
+
+  
+
+  .modal-backdrop {
+    width: 100%;
+    height: 100%;
+ }
+}
+
+/* Define o css para o tamanho da resolução em IPad modo Portrait */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+  .bg-transparent {
+    transition: 750ms ease;
+    background-color: transparent !important;
+  }
+
+  .nav-image {
+    content: url("/src/clipitch/imgs/logo-mobile.png");
+    width: 20%;
+    height: 100%;
+  }
+
+  #carouselIFrame {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  #colModal1.col {
+    flex: 1 0 100%;
+    padding-bottom: 5%;
+  }
+  #carouselIFrame {
+    width: 100%;
+    height: 100%;
+  }
+
+  .modal-dialog-centered{    
+    margin-left: 10%;
+  }
+
+  .imgsModal {
+    width: 15%;
+  }
+
+  .iframeModal {
+    width: 100%;
+    height: 100%;
+  }
+
+  body{
+    width: 100%;
+    height: 100%;
+  }
+
+  body.modal-open {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow-y: scroll;
+  }
+
+  .modal-content{
+    width: 100%;
+    height: 90%;
+  }
+  
+  .modal-backdrop {
+    width: 100%;
+    height: 100%;
+  }  
+}
+
+/* Define o css para o tamanho da resolução em IPad modo Landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
+  .bg-transparent {
+    transition: 750ms ease;
+    background-color: transparent !important;
+  }
+
+  .nav-image {
+    content: url("/src/clipitch/imgs/logo-mobile.png");
+    width: 20%;
+    height: 100%;
+  }
+
+  #carouselIFrame {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  
+  #carouselIFrame {
+    width: 100%;
+    height: 100%;
+  }
+
+  .modal-dialog-centered{    
+    margin-left: 10%;
+  }
+
+  .imgsModal {
+    width: 30%;
+  }
+
+  .iframeModal {
+    width: 100%;
+    height: 100%;
+  }
+
+  body{
+    width: 100%;
+    height: 100%;
+  }
+
+  .modal-content{
+    width: 100%;
+    height: 90%;
+  }
+  
+  .modal-backdrop {
+    width: 100%;
+    height: 100%;
+  }  
+}
+
+/* Define o css para o tamanho da resolução em IPad Pro modo Portrait */
+@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  .bg-transparent {
+    transition: 750ms ease;
+    background-color: transparent !important;
+  }
+
+  .nav-image {
+    content: url("/src/clipitch/imgs/logo-mobile.png");
+    width: 20%;
+    height: 100%;
+  }
+}
+
+/* Define o css para o tamanho da resolução Iphone X (Mobile) */
+@media only screen and (max-width: 600px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  .bg-transparent {
+    background-color: #c271eb !important;
+    position: relative;
+  }
+
+  .nav-image {
+    content: url("/src/clipitch/imgs/logo-mobile.png");
+    width: 20%;
+    height: 100%;
+  }
+
+  #carouselIFrame {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  .modal-content{
+    width: 100%;
+    height: 100%;
+  }
+
+  #colModal1.col {
+    flex: 1 0 100%;
+    padding-bottom: 5%;
+  }
+
+  .modal-dialog-centered{    
+    margin-left: 10% !important;
+  }
+
+  .modal-xl {
+    max-width: 100% !important;
+    max-height: 100% !important;
+  }
+
+  .imgsModal {
+    width: 25%;
+  }
+
+  .iframeModal {
+    width: 100%;
+    height: 100%;
+  }
 }
