--- a/src/clipitch/css/style.css
+++ b/src/clipitch/css/style.css
@@ -118,11 +118,10 @@ ul li a {
 }
 
 .testeImg:hover {
-  border-left: 7px solid #c271eb !important;
-  border-bottom: 7px solid #c271eb !important;
+  border-left: 2px solid #c271eb !important;
+  border-bottom: 2px solid #c271eb !important;
   transform: scale(1.01);
 }
-
 
 .modal {
   width: 100%; /* Full width */
@@ -135,13 +134,13 @@ ul li a {
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
-  margin: 15% auto;
-  width: 45%;
+  margin: 60% auto;
+  width: auto;
 }
 
 .close {
   color: white;
-  font-size: 28px;
+  font-size: 36px;
   font-weight: bold;
 }
 
@@ -181,7 +180,6 @@ ul li a {
   height: 360px;
 }
 
-
 /* Define o css para o tamanho da resolução em Tablets */
 @media screen and (max-width: 992px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
   .bg-transparent {
@@ -200,13 +198,12 @@ ul li a {
     height: 100% !important;
   }
 
-  
   #carouselIFrame {
     width: 100% !important;
     height: 100% !important;
   }
 
-  .modal-content{
+  .modal-content {
     width: 100%;
     height: 100%;
   }
@@ -216,7 +213,7 @@ ul li a {
     padding-bottom: 5%;
   }
 
-  .modal-dialog-centered{    
+  .modal-dialog-centered {
     margin-left: 10%;
   }
 
@@ -234,17 +231,15 @@ ul li a {
     height: 100%;
   }
 
-  body{
+  body {
     width: 100%;
     height: 100%;
   }
 
-  
-
   .modal-backdrop {
     width: 100%;
     height: 100%;
- }
+  }
 }
 
 /* Define o css para o tamanho da resolução em IPad modo Portrait */
@@ -274,7 +269,7 @@ ul li a {
     height: 100%;
   }
 
-  .modal-dialog-centered{    
+  .modal-dialog-centered {
     margin-left: 10%;
   }
 
@@ -287,7 +282,7 @@ ul li a {
     height: 100%;
   }
 
-  body{
+  body {
     width: 100%;
     height: 100%;
   }
@@ -301,15 +296,15 @@ ul li a {
     overflow-y: scroll;
   }
 
-  .modal-content{
+  .modal-content {
     width: 100%;
     height: 90%;
   }
-  
+
   .modal-backdrop {
     width: 100%;
     height: 100%;
-  }  
+  }
 }
 
 /* Define o css para o tamanho da resolução em IPad modo Landscape */
@@ -330,13 +325,12 @@ ul li a {
     height: 100% !important;
   }
 
-  
   #carouselIFrame {
     width: 100%;
     height: 100%;
   }
 
-  .modal-dialog-centered{    
+  .modal-dialog-centered {
     margin-left: 10%;
   }
 
@@ -349,20 +343,20 @@ ul li a {
     height: 100%;
   }
 
-  body{
+  body {
     width: 100%;
     height: 100%;
   }
 
-  .modal-content{
+  .modal-content {
     width: 100%;
     height: 90%;
   }
-  
+
   .modal-backdrop {
     width: 100%;
     height: 100%;
-  }  
+  }
 }
 
 /* Define o css para o tamanho da resolução em IPad Pro modo Portrait */
@@ -397,7 +391,7 @@ ul li a {
     height: 100% !important;
   }
 
-  .modal-content{
+  .modal-content {
     width: 100%;
     height: 100%;
   }
@@ -407,7 +401,7 @@ ul li a {
     padding-bottom: 5%;
   }
 
-  .modal-dialog-centered{    
+  .modal-dialog-centered {
     margin-left: 10% !important;
   }
 
